Added content to show and index recipe pages

--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,3 +1,6 @@
-<%= @recipe.recipe_name %>
+<h1><%= @recipe.recipe_name %></h1>
+<p> <strong>Serving Size: </strong><%= @recipe.serving_size%></p>
+<p> <strong>Directions: </strong><%= @recipe.directions%> </p>
+<p> <strong>Ingredients: </strong><%= @recipe.ingredients%> </p>
 <br><br>
 <a href="/users/<%=current_user.id%>">Return to your homepage</a>
