Updated links on show and index pages for better navigation, and added a photo to the homepage.

--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -3,4 +3,5 @@
 <p> <strong>Directions: </strong><%= @recipe.directions%> </p>
 <p> <strong>Ingredients: </strong><%= @recipe.ingredients%> </p>
 <br><br>
-<a href="/users/<%=current_user.id%>">Return to your homepage</a>
+
+<%= link_to "Return to your homepage", user_path(@user)%>
