--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,4 +1,8 @@
 <center><h1> All Recipes </h1>
+
 <% @recipes.each do |recipe|%>
-    <%= link_to recipe.recipe_name, recipe_path(recipe)%>
-<%end%></center>
+    <% if recipe.user_id == session[:user_id]%>
+        <%= link_to recipe.recipe_name, recipe_path(recipe)%>
+    <%end%>
+<%end%>
+<br><br></center>
