--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,4 @@
 <center> <h1> Welcome to RecipeBox, <%= @user.name %></h1> 
-<a href="/recipes/new"> Click here to add a new recipe</a>
+<a href="/recipes/new"> Click here to add a new recipe</a><br><br>
+<a href="/recipes">Click here to see all recipes</a>
 <br><br></center>
